--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/datetimepicker": "^8.5.0",
+    "@react-native-community/slider": "5.0.1",
     "@react-native-picker/picker": "^2.11.3",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -26,20 +27,27 @@
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.7",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
+    "i18next": "^25.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.2.3",
     "react-native": "0.81.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.7.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
