Fix: Add post_install hook for folly build error

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -58,3 +58,14 @@ target 'Connexions' do
     )
   end
 end
+# Start of Folly fix
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['OTHER_CPLUSPLUSFLAGS'] ||= ['$(inherited)']
+      config.build_settings['OTHER_CPLUSPLUSFLAGS'] << '-DFOLLY_CFG_NO_COROUTINES=1'
+      config.build_settings['OTHER_CPLUSPLUSFLAGS'] << '-DFOLLY_HAVE_CLOCK_GETTIME=1'
+    end
+  end
+end
+# End of Folly fix
