--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=6000
 MONGO_URI=mongodb+srv://Hello:Test1234@cluster0.xl3bfkj.mongodb.net/connectionapp?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=a9d8f7b0c1e2a3d4b5e6f7a8b9c0d1e2f3a4b5c6d7e8f9
